# action-testing

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.devcontainer/python/: Dockerfile  devcontainer.json
.github/actions/docker/: action.yml
.github/actions/dockerhub/: action.yml
.github/actions/pytest/: action.yml
.github/actions/python/: action.yml
.github/actions/sonarcloud/: action.yml
.github/workflows/: build-python.yml  learn-github-actions.yml  python-app.yml
.husky/: pre-commit
docs/source/: conf.py  index.rst
example_project/: wallet.py
src/banking/: wallet.py
src/python_app/: requirements.txt
src/python_app/wallet/: wallet.py
tests/: test_wallet.py
