[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.poetry]
name = "banking"
version = "1.0.1"
description = "Test project for a Python CI using Github Actions"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
